# rust-user-signup-forgot-password-email

./: .env  .env.example  .gitignore  Cargo.toml  Makefile  README.md  Rust Signup SignIn Email.postman_collection.json
migrations/: 20230616144424_initial_migration.down.sql  20230616144424_initial_migration.up.sql  20230616191956_added_more_fields.down.sql  20230616191956_added_more_fields.up.sql  20230630095915_added_password_reset_fields.down.sql  20230630095915_added_password_reset_fields.up.sql
src/: config.rs  email.rs  handler.rs  jwt_auth.rs  main.rs  model.rs  response.rs  route.rs
templates/: reset_password.hbs  verification_code.hbs
templates/layouts/: base.hbs
templates/partials/: styles.hbs
